[gd_scene load_steps=20 format=3 uid="uid://dofnxkn5mwsri"]

[ext_resource type="Script" path="res://game_scenes/game_over_minigame/player.gd" id="1_qfqtu"]
[ext_resource type="Script" path="res://game_scenes/game_over_minigame/game_over_minigame.gd" id="1_urof0"]
[ext_resource type="Texture2D" uid="uid://c58ot3jkuvk6g" path="res://assets/sprites/heart/heart.png" id="3_yerqe"]
[ext_resource type="Texture2D" uid="uid://ceblt7glrrky7" path="res://assets/sprites/heart/heart1.png" id="4_5xsh4"]
[ext_resource type="PackedScene" uid="uid://c330gagwai2ik" path="res://game_scenes/game_over_minigame/spawner.tscn" id="4_nf712"]
[ext_resource type="PackedScene" uid="uid://cbypa12f0w3kt" path="res://system/game_over_minigame/g_o_minigame.tscn" id="5_iv0dm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1nee7"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": ExtResource("3_yerqe")
}, {
"duration": 1.0,
"texture": ExtResource("4_5xsh4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r00bq"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhuw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0hla"]
size = Vector2(13, 432)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4uq5"]
size = Vector2(241, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rquta"]
size = Vector2(199, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjqtv"]
size = Vector2(151, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrr88"]
size = Vector2(212.5, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gcvo"]
size = Vector2(152, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhuwu"]
size = Vector2(54, 21.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wy026"]
size = Vector2(59.196, 12.3427)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1vfs"]
size = Vector2(462, 550)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knur5"]
size = Vector2(239, 15)

[node name="gameOverMinigame" type="Node2D"]
position = Vector2(448, 110)
script = ExtResource("1_urof0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 10
offset_left = 449.0
offset_top = 233.0
offset_right = 496.0
offset_bottom = 273.0
scale = Vector2(3.68088, 0.256707)

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 10
offset_left = 477.0
offset_top = 381.0
offset_right = 532.0
offset_bottom = 421.0
scale = Vector2(3.68088, 0.256707)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -37.0
offset_top = -31.0
offset_right = 1165.0
offset_bottom = 659.0
color = Color(0.103744, 0.103744, 0.103744, 1)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 435.0
offset_top = 96.0
offset_right = 470.0
offset_bottom = 155.0
scale = Vector2(7.36187, 7.36187)
metadata/_edit_lock_ = true

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 110.0
offset_right = 480.0
offset_bottom = 165.0
scale = Vector2(7.36187, 7.36187)
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 502.0
offset_right = 480.0
offset_bottom = 504.0
scale = Vector2(7.36187, 7.36187)
color = Color(0, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="player" type="CharacterBody2D" parent="CanvasLayer"]
position = Vector2(564, 132)
collision_layer = 9
motion_mode = 1
script = ExtResource("1_qfqtu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/player"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_1nee7")
autoplay = "default"
frame_progress = 0.0714496

[node name="collBox" type="CollisionShape2D" parent="CanvasLayer/player"]
shape = SubResource("RectangleShape2D_r00bq")
debug_color = Color(0.154628, 0.51833, 1, 0.42)

[node name="hurtbox" type="Area2D" parent="CanvasLayer/player"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/player/hurtbox"]
shape = SubResource("RectangleShape2D_mhuw3")
debug_color = Color(2.88785e-06, 0.637681, 0.388877, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasLayer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/StaticBody2D"]
position = Vector2(441.5, 312)
shape = SubResource("RectangleShape2D_a0hla")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CanvasLayer/StaticBody2D"]
position = Vector2(690, 311)
shape = SubResource("RectangleShape2D_a0hla")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CanvasLayer/StaticBody2D"]
position = Vector2(565.5, 524)
shape = SubResource("RectangleShape2D_i4uq5")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CanvasLayer/StaticBody2D"]
position = Vector2(565, 102)
shape = SubResource("RectangleShape2D_i4uq5")

[node name="colTrack" type="StaticBody2D" parent="CanvasLayer"]

[node name="gOMinigame" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(544, 161)
shape = SubResource("RectangleShape2D_rquta")

[node name="gOMinigame2" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(589.5, 210)
shape = SubResource("RectangleShape2D_kjqtv")

[node name="gOMinigame3" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(582.25, 258)
shape = SubResource("RectangleShape2D_jrr88")

[node name="gOMinigame4" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(515, 328)
shape = SubResource("RectangleShape2D_4gcvo")

[node name="gOMinigame5" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(658, 326.75)
shape = SubResource("RectangleShape2D_yhuwu")

[node name="gOMinigame6" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(562, 374)
scale = Vector2(0.758681, 0.758681)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame7" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(605.731, 400.269)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame8" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(518, 400)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame9" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(563, 427)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame10" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(491, 426)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame11" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(635, 428)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame12" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(604, 455)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame13" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(528, 456)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame14" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(482, 490)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame15" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(650, 492)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame16" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(567, 491)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="gOMinigame17" parent="CanvasLayer/colTrack" instance=ExtResource("5_iv0dm")]
position = Vector2(566, 474)
scale = Vector2(0.853727, 0.853727)
shape = SubResource("RectangleShape2D_wy026")

[node name="tmrRevive" type="Timer" parent="CanvasLayer"]
wait_time = 2.0
one_shot = true

[node name="spawner3" parent="CanvasLayer" instance=ExtResource("4_nf712")]
position = Vector2(682, 525)
movementFrom = Vector2(-5, -10)
movementTo = Vector2(-10, -5)
yDrift = -2

[node name="spawner4" parent="CanvasLayer" instance=ExtResource("4_nf712")]
position = Vector2(448, 523)
movementFrom = Vector2(5, -50)
movementTo = Vector2(10, -1)
yDrift = -2

[node name="spawner5" parent="CanvasLayer" instance=ExtResource("4_nf712")]
position = Vector2(519, 547)
movementFrom = Vector2(-10, -50)
movementTo = Vector2(10, -1)
yDrift = -2

[node name="spawner6" parent="CanvasLayer" instance=ExtResource("4_nf712")]
position = Vector2(613, 548)
movementFrom = Vector2(-10, -50)
movementTo = Vector2(10, -1)
yDrift = -2

[node name="spawner7" parent="CanvasLayer" instance=ExtResource("4_nf712")]
position = Vector2(564, 573)
movementFrom = Vector2(-50, -50)
movementTo = Vector2(50, -1)
yDrift = -2

[node name="despawner" type="Area2D" parent="CanvasLayer"]
position = Vector2(448, 110)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/despawner"]
position = Vector2(117, 204)
shape = SubResource("RectangleShape2D_g1vfs")
debug_color = Color(0.838371, 0.812423, 1, 0.42)

[node name="goal" type="Area2D" parent="CanvasLayer"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/goal"]
position = Vector2(566.5, 509.5)
shape = SubResource("RectangleShape2D_knur5")
debug_color = Color(1.05888e-06, 0.636143, 0.408563, 0.42)

[node name="game" type="Label" parent="CanvasLayer"]
offset_left = 84.0
offset_top = 253.0
offset_right = 130.0
offset_bottom = 276.0
scale = Vector2(3.47014, 3.6833)
text = "Game"

[node name="over" type="Label" parent="CanvasLayer"]
offset_left = 866.0
offset_top = 230.0
offset_right = 906.0
offset_bottom = 253.0
scale = Vector2(5.36012, 5.36012)
text = "Over"

[node name="btnMainMenu" type="Button" parent="CanvasLayer"]
z_index = 15
offset_left = 1037.0
offset_top = 588.0
offset_right = 1146.0
offset_bottom = 636.0
text = "Main Menu"

[connection signal="body_entered" from="CanvasLayer/player/hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="CanvasLayer/tmrRevive" to="." method="_on_tmr_revive_timeout"]
[connection signal="body_exited" from="CanvasLayer/despawner" to="." method="_on_despawner_body_exited"]
[connection signal="body_entered" from="CanvasLayer/goal" to="." method="_on_goal_body_entered"]
[connection signal="pressed" from="CanvasLayer/btnMainMenu" to="." method="_on_btn_main_menu_pressed"]
